# dawremi

./: .gitignore  Cargo.toml  README.md
assets/: README.md
assets/vsts/TestPlugin.vst/Contents/: Info.plist
assets/vsts/TestPlugin.vst/Contents/MacOS/: TestPlugin
crates/dawremi_core/: Cargo.toml
crates/dawremi_core/src/: debug.rs  frame.rs  lib.rs  looper.rs  notes.rs  player.rs  record.rs  select.rs  song.rs  traits.rs
crates/dawremi_core/src/effects/: autotune.rs  balance.rs  bass_boost.rs  delay.rs  fft_convolution.rs  filter.rs  flanger.rs  mod.rs  multitap_reverb.rs  pitch_shift.rs  stretch.rs  volume.rs
crates/dawremi_core/src/helpers/: extensions.rs  interpolation.rs  macros.rs  mod.rs  pitch_detection.rs  resampling.rs
crates/dawremi_core/src/signals/: interpolation.rs  mod.rs  noise.rs  waves.rs
crates/dawremi_core/src/sound_files/: enums.rs  io.rs  mod.rs
crates/dawremi_core/src/sound_files/enums/: mod.rs  princess_girlfriend.rs  reverb.rs
crates/dawremi_core/src/synth/: bell.rs  drum_hihat.rs  drum_kick.rs  drum_snare.rs  harmonica.rs  mod.rs  plucked.rs
crates/dawremi_debug/: Cargo.toml
crates/dawremi_debug/src/: lib.rs
examples/: README.md  arpl.rs  arpl_drum_pattern.rs  custom_effect.rs  custom_synth_instrument.rs  demo_song.rs  drum_pattern.rs  fundsp.rs  music_theory.rs
src/: arpl.rs  debug.rs  frame.rs  frequency.rs  fundsp.rs  helpers.rs  lib.rs  main.rs  notes.rs  player.rs  record.rs  song.rs  sound_files.rs  synth.rs  trigger.rs  vst.rs
src/effects/: autotune.rs  bass_boost.rs  bit_crusher.rs  compressor.rs  convolution.rs  fft_convolution.rs  filter.rs  flanger.rs  mod.rs  multitap_reverb.rs  pitch_shift.rs  ring_modulator.rs  slow_convolution.rs  volume.rs
src/helpers/: delay_line.rs  extensions.rs  macros.rs  mod.rs  resampling.rs
src/loopers/: mod.rs  test_looper.rs
src/music_theory/: chords.rs  intervals.rs  mod.rs  n_tet.rs  notes.rs  scales.rs
src/signals/: adsr.rs  asdr.rs  interpolation.rs  mod.rs  noise.rs  waves.rs
src/song/: audio_effects.rs  mod.rs  test.rs  test_song.rs  twinkle_twinkle.rs
src/songs/: audio_effects.rs  demo_song.rs  guitar_tests.rs  mod.rs  test_song.rs  twinkle_twinkle.rs
src/sound_files/: enums.rs  io.rs  mod.rs  pattern.rs
src/sound_files/enums/: mod.rs
src/synth/: bell.rs  drum_hihat.rs  drum_kick.rs  drum_snare.rs  harmonica.rs  mod.rs  plucked.rs
