[package]
name = "dawremi"
version = "0.1.0"
authors = ["guimcaballero <guim.caballero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
cpal = "0.13.1"
dasp = { git = "https://github.com/RustAudio/dasp/", branch = "master", features = ["all"] }
hound = "3.4.0"
rand = "0.7.3"
realfft = "0.3.0"
rustfft = "4.0.0"

[features]
metronome = []
