[package]
name = "dawremi"
version = "0.1.0"
authors = ["guimcaballero <guim.caballero@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
convert_case = "0.4.0"
cpal = "0.13.1"
dasp = { git = "https://github.com/RustAudio/dasp/", branch = "master", features = ["all"] }
hound = "3.4.0"
num = "0.3.1"
num-integer = "0.1.44"
open = "1.6.0"
pitch-detection = "0.2.0"
pvoc = "0.1.6"
rand = "0.7.3"
realfft = "0.4.0"
rustfft = "5.0.0"
vst = "0.2.1"
walkdir = "2.3.2"
