[package]
name = "dawremi"
version = "0.1.0"
authors = ["guimcaballero <guim.caballero@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
convert_case = "0.4.0"
cpal = "0.13.1"
dasp = { git = "https://github.com/RustAudio/dasp/", branch = "master", features = ["all"] }
hound = "3.4.0"
noise = "0.7.0"
num = "0.3.1"
num-integer = "0.1.44"
open = "1.6.0"
pitch-detection = "0.2.0"
pvoc = "0.1.7"
rand = "0.7.3"
realfft = "2.0.1"
rustfft = "6.0.1"
vst = "0.2.1"
walkdir = "2.3.2"
fundsp = { git = "https://github.com/SamiPerttu/fundsp", rev = "45135502169a572b1a623ec1c78f128421aa38e9" }
arpl = { git = "https://github.com/guimcaballero/arpl", rev = "ef4cc4f096461f80ad75edbb19e2f98eea8d115f" }
